# QuantDinger

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  README.md  pyproject.toml
.codex/: notepad.md
.codex/scopes/merge-upstream-v3-0-22/: merge-upstream-v3-0-22-brainstorming.md  merge-upstream-v3-0-22-implementation-research-notes.md
.codex/wiki/: decision-log.md  index.md  maintenance-log.md
.codex/wiki/.index/: code-map.json  pages.json  references.json
.codex/wiki/concepts/: product-architecture.md
.codex/wiki/implementation/: agent-gateway-and-mcp.md  deployment-and-operations.md  strategy-backtest-and-execution.md
.codex/wiki/reference/: api-conventions.md  broker-and-market-guides.md  configuration-and-integrations.md  current-verification-commands.md  project-governance.md  source-docs-archive-map.md  upstream-merge-playbook.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: basic-ci.yml  openapi-ci.yml
backend_api_python/: README.md  env.example  requirements.txt
backend_api_python/app/: __init__.py  _version.py
backend_api_python/app/openapi/: tags.py  (+2 more)
backend_api_python/migrations/: init.sql
backend_api_python/scripts/: export_openapi.py
backend_api_python/tests/: test_fill_recovery.py  test_grid_bitget_fills.py  test_grid_engine.py  test_grid_exchange_fill_contracts.py  test_grid_fill_units.py  test_grid_poller.py
mcp_server/: README.md  pyproject.toml
scripts/: build-frontend.ps1  bump_version.py  check_version.py  generate-secret-key.ps1  generate-secret-key.sh  patch_grid_i18n.py
(+70 files in other folders)
